Update kernel generator and config files to new configuration syntax. Update docs.

--- a/xndlib/mkl_blas-kernels.cfg
+++ b/xndlib/mkl_blas-kernels.cfg
@@ -42,27 +42,26 @@
 #  
 #  
 [MODULE mkl_blas]
-typemaps = 
+typemaps: 
 	MKL_INT: int64
 	double: float64
 	float: float32
-includes = 
+includes: 
 	mkl_blas.h
-include_dirs = 
-	/home/pearu/anaconda3/envs/xnd-tools/include
-libraries = 
+include_dirs: 
+	<prefix>/include
+libraries: 
 	
-library_dirs = 
+library_dirs: 
 	
-header_code = 
-kinds = Xnd
-ellipses = ...
+kinds: Xnd
+ellipses: ...
 
 [KERNEL dot]
 prototypes: 
-	double ddot(MKL_INT *  n, double *  x, MKL_INT *  incx, double *  y, MKL_INT *  incy);
-	float sdot(MKL_INT *  n, float *  x, MKL_INT *  incx, float *  y, MKL_INT *  incy);
+	double ddot(const MKL_INT *  n, double *  x, const MKL_INT *  incx, double *  y, const MKL_INT *  incy);
+	float sdot(const MKL_INT *  n, float *  x, const MKL_INT *  incx, float *  y, const MKL_INT *  incy);
 description: Compute dot product of two arrays
-input_arguments: x(n), y(n)
-hide_arguments: n = len(x), incx = 1, incy = 1
+input: x(n), y(n)
+hide: n=len(x), incx=1, incy=1
 
