--- a/xndlib/test_mixed-kernels.cfg
+++ b/xndlib/test_mixed-kernels.cfg
@@ -10,22 +10,22 @@
 #
 
 [MODULE test_mixed]
-typemaps = 
+typemaps: 
 	long: int64
-includes = 
+includes:
 	test_mixed.h
-include_dirs = 
+include_dirs:
 	examplelib
-sources =
+sources:
 	examplelib/test_mixed.c
 
-ellipses = none
+ellipses:none
 
 [KERNEL test_mixed_matrices_input]
-kinds = Xnd
-prototypes =
+kinds: Xnd
+prototypes:
 	   long test_mixed_matrices(long n, long* a, long* b);
-description = return sum of right-corner elements of a and b
-input_arguments = a(n, n), b(n,n)
-hide_arguments = n = len(a)
-fortran_arguments = b
+description: return sum of right-corner elements of a and b
+input: a(n, n), b(n,n)
+hide: n = len(a)
+fortran: b
