--- a/xndlib/test_scalar-kernels.cfg
+++ b/xndlib/test_scalar-kernels.cfg
@@ -9,437 +9,437 @@
 #  xnd_tools config -m test_scalar examplelib/test_scalar.c
 
 [MODULE test_scalar]
-typemaps = 
+typemaps: 
 	long: int64
-includes = 
+includes: 
 	test_scalar.h
-include_dirs = 
+include_dirs: 
 	examplelib
-sources =
+sources:
 	examplelib/test_scalar.c
-kinds = Xnd
+kinds: Xnd
 
-ellipses = none, ...
+ellipses: none, ...
 #, ... 
 #, ...
-#ellipses = ..., var...
+#ellipses: ..., var...
 #debug=False
 
 [KERNEL test_scalar_input]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and does nothing
-input_arguments = a
+description: takes input and does nothing
+input: a
 
 [KERNEL test_scalar_inplace]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and does nothing
-inplace_arguments = a
+description: takes input and does nothing
+inplace: a
 
 [KERNEL test_scalar_inout]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and does nothing
-inout_arguments = a
+description: takes input and does nothing
+inout: a
 
 [KERNEL test_scalar_input_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and returns
-input_arguments = a
-output_arguments = a
+description: takes input and returns
+input: a
+output: a
 
 [KERNEL test_scalar_inplace_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and returns
-inplace_arguments = a
-output_arguments = a
+description: takes input and returns
+inplace: a
+output: a
 
 [KERNEL test_scalar_inout_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and returns
-inout_arguments = a
-output_arguments = a
+description: takes input and returns
+inout: a
+output: a
 
 [KERNEL test_scalar_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = returns something
-output_arguments = a
+description: returns something
+output: a
 
 [KERNEL test_scalar_hide]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = do nothing
-hide_arguments = a
+description: do nothing
+hide: a
 
 
 [KERNEL test_scalar_ptr_input]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = takes input and does nothing
-input_arguments = a
+description: takes input and does nothing
+input: a
 
 [KERNEL test_scalar_ptr_inplace]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = takes input and increments by 10
-inplace_arguments = a
+description: takes input and increments by 10
+inplace: a
 
 [KERNEL test_scalar_ptr_inout]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = takes input and increments by 10
-inout_arguments = a
+description: takes input and increments by 10
+inout: a
 
 [KERNEL test_scalar_ptr_input_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = takes input and returns increment by 10
-input_arguments = a
-output_arguments = a
+description: takes input and returns increment by 10
+input: a
+output: a
 
 [KERNEL test_scalar_ptr_inplace_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = takes input, increments by 10 and returns
-inplace_arguments = a
-output_arguments = a
+description: takes input, increments by 10 and returns
+inplace: a
+output: a
 
 [KERNEL test_scalar_ptr_inout_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = takes input, increments by 10 and returns
-inout_arguments = a
-output_arguments = a
+description: takes input, increments by 10 and returns
+inout: a
+output: a
 
 [KERNEL test_scalar_ptr_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = returns something incremented by 10
-output_arguments = a
+description: returns something incremented by 10
+output: a
 
 [KERNEL test_scalar_ptr_hide]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long*   a);
-description = do nothing
-hide_arguments = a
+description: do nothing
+hide: a
 
 
 
 [KERNEL test_scalar_return_input]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns increment by 20
-input_arguments = a
+description: takes input, returns increment by 20
+input: a
 
 [KERNEL test_scalar_return_inplace]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns increment by 20
-inplace_arguments = a
+description: takes input, returns increment by 20
+inplace: a
 
 [KERNEL test_scalar_return_inout]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns increment by 20
-inout_arguments = a
+description: takes input, returns increment by 20
+inout: a
 
 [KERNEL test_scalar_return_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = returns something increment by 20, two values
-output_arguments = a
+description: returns something increment by 20, two values
+output: a
 
 [KERNEL test_scalar_return_hide]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = returns something increment by 20
-hide_arguments = a
+description: returns something increment by 20
+hide: a
 
 [KERNEL test_scalar_return_input_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns value and increment by 20
-input_arguments = a
-output_arguments = a
+description: takes input, returns value and increment by 20
+input: a
+output: a
 
 [KERNEL test_scalar_return_inplace_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns value and increment by 20
-inplace_arguments = a
-output_arguments = a
+description: takes input, returns value and increment by 20
+inplace: a
+output: a
 
 [KERNEL test_scalar_return_inout_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns value and increment by 20
-inout_arguments = a
-output_arguments = a
+description: takes input, returns value and increment by 20
+inout: a
+output: a
 
 
 
 [KERNEL test_scalar_ptr_return_input]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns increment by 30
-input_arguments = a
+description: takes input, returns increment by 30
+input: a
 
 [KERNEL test_scalar_ptr_return_inplace]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, increments by 10, returns increment by 30
-inplace_arguments = a
+description: takes input, increments by 10, returns increment by 30
+inplace: a
 
 [KERNEL test_scalar_ptr_return_inout]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, increments by 10, returns increment by 30
-inout_arguments = a
+description: takes input, increments by 10, returns increment by 30
+inout: a
 
 [KERNEL test_scalar_ptr_return_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = returns something increment by 30 and 10
-output_arguments = a
+description: returns something increment by 30 and 10
+output: a
 
 [KERNEL test_scalar_ptr_return_hide]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = returns something increment by 30
-hide_arguments = a
+description: returns something increment by 30
+hide: a
 
 [KERNEL test_scalar_ptr_return_input_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns value and increment by 30
-input_arguments = a
-output_arguments = a
+description: takes input, returns value and increment by 30
+input: a
+output: a
 
 [KERNEL test_scalar_ptr_return_inplace_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns value incremented by 10 and increment by 30
-inplace_arguments = a
-output_arguments = a
+description: takes input, returns value incremented by 10 and increment by 30
+inplace: a
+output: a
 
 [KERNEL test_scalar_ptr_return_inout_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *   a);
-description = takes input, returns value incremented by 10 and increment by 30
-inout_arguments = a
-output_arguments = a
+description: takes input, returns value incremented by 10 and increment by 30
+inout: a
+output: a
 
 # WITH VALUES
 
 [KERNEL test_scalar_value_input]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and does nothing
-input_arguments = a = 5
+description: takes input and does nothing
+input: a = 5
 
 [KERNEL test_scalar_value_inplace]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and does nothing
-inplace_arguments = a = 5
+description: takes input and does nothing
+inplace: a = 5
 
 [KERNEL test_scalar_value_inout]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and does nothing
-inout_arguments = a = 5
+description: takes input and does nothing
+inout: a = 5
 
 [KERNEL test_scalar_value_input_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and returns
-input_arguments = a = 5
-output_arguments = a
+description: takes input and returns
+input: a = 5
+output: a
 
 [KERNEL test_scalar_value_inplace_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and returns
-inplace_arguments = a = 5
-output_arguments = a
+description: takes input and returns
+inplace: a = 5
+output: a
 
 [KERNEL test_scalar_value_inout_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = takes input and returns
-inout_arguments = a = 5
-output_arguments = a
+description: takes input and returns
+inout: a = 5
+output: a
 
 [KERNEL test_scalar_value_output]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = returns something
-output_arguments = a = 5
+description: returns something
+output: a = 5
 
 [KERNEL test_scalar_value_hide]
-prototypes = 
+prototypes: 
 	void test_scalar(long   a);
-description = do nothing
-hide_arguments = a = 5
+description: do nothing
+hide: a = 5
 
 
 [KERNEL test_scalar_ptr_value_input]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = takes input and does nothing
-input_arguments = a = 5
+description: takes input and does nothing
+input: a = 5
 
 [KERNEL test_scalar_ptr_value_inplace]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = takes input and does nothing
-inplace_arguments = a = 5
+description: takes input and does nothing
+inplace: a = 5
 
 [KERNEL test_scalar_ptr_value_inout]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = takes input and does nothing
-inout_arguments = a = 5
+description: takes input and does nothing
+inout: a = 5
 
 [KERNEL test_scalar_ptr_value_input_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = takes input and returns
-input_arguments = a = 5
-output_arguments = a
+description: takes input and returns
+input: a = 5
+output: a
 
 [KERNEL test_scalar_ptr_value_inplace_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = takes input and returns
-inplace_arguments = a = 5
-output_arguments = a
+description: takes input and returns
+inplace: a = 5
+output: a
 
 [KERNEL test_scalar_ptr_value_inout_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = takes input and returns
-inout_arguments = a = 5
-output_arguments = a
+description: takes input and returns
+inout: a = 5
+output: a
 
 [KERNEL test_scalar_ptr_value_output]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = returns something
-output_arguments = a = 5
+description: returns something
+output: a = 5
 
 [KERNEL test_scalar_ptr_value_hide]
-prototypes = 
+prototypes: 
 	void test_scalar_ptr(long *  a);
-description = do nothing
-hide_arguments = a = 5
+description: do nothing
+hide: a = 5
 
 
 
 [KERNEL test_scalar_value_return_input]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns increment by 20
-input_arguments = a = 5
+description: takes input, returns increment by 20
+input: a = 5
 
 [KERNEL test_scalar_value_return_inplace]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns increment by 20
-inplace_arguments = a = 5
+description: takes input, returns increment by 20
+inplace: a = 5
 
 [KERNEL test_scalar_value_return_inout]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns increment by 20
-inout_arguments = a = 5
+description: takes input, returns increment by 20
+inout: a = 5
 
 [KERNEL test_scalar_value_return_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = returns something increment by 20, two values
-output_arguments = a = 5
+description: returns something increment by 20, two values
+output: a = 5
 
 [KERNEL test_scalar_value_return_hide]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = returns something increment by 20
-hide_arguments = a = 5
+description: returns something increment by 20
+hide: a = 5
 
 [KERNEL test_scalar_value_return_input_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns value and increment by 20
-input_arguments = a = 5
-output_arguments = a
+description: takes input, returns value and increment by 20
+input: a = 5
+output: a
 
 [KERNEL test_scalar_value_return_inplace_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns value and increment by 20
-inplace_arguments = a = 5
-output_arguments = a
+description: takes input, returns value and increment by 20
+inplace: a = 5
+output: a
 
 [KERNEL test_scalar_value_return_inout_output]
-prototypes = 
+prototypes: 
 	long test_scalar_return(long   a);
-description = takes input, returns value and increment by 20
-inout_arguments = a = 5
-output_arguments = a
+description: takes input, returns value and increment by 20
+inout: a = 5
+output: a
 
 
 [KERNEL test_scalar_ptr_value_return_input]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns increment by 20
-input_arguments = a = 5
+description: takes input, returns increment by 20
+input: a = 5
 
 [KERNEL test_scalar_ptr_value_return_inplace]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns increment by 20
-inplace_arguments = a = 5
+description: takes input, returns increment by 20
+inplace: a = 5
 
 [KERNEL test_scalar_ptr_value_return_inout]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns increment by 20
-inout_arguments = a = 5
+description: takes input, returns increment by 20
+inout: a = 5
 
 [KERNEL test_scalar_ptr_value_return_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = returns something increment by 20, two values
-output_arguments = a = 5
+description: returns something increment by 20, two values
+output: a = 5
 
 [KERNEL test_scalar_ptr_value_return_hide]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = returns something increment by 20
-hide_arguments = a = 5
+description: returns something increment by 20
+hide: a = 5
 
 [KERNEL test_scalar_ptr_value_return_input_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns value and increment by 20
-input_arguments = a = 5
-output_arguments = a
+description: takes input, returns value and increment by 20
+input: a = 5
+output: a
 
 [KERNEL test_scalar_ptr_value_return_inplace_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns value and increment by 20
-inplace_arguments = a = 5
-output_arguments = a
+description: takes input, returns value and increment by 20
+inplace: a = 5
+output: a
 
 [KERNEL test_scalar_ptr_value_return_inout_output]
-prototypes = 
+prototypes: 
 	long test_scalar_ptr_return(long *  a);
-description = takes input, returns value and increment by 20
-inout_arguments = a = 5
-output_arguments = a
+description: takes input, returns value and increment by 20
+inout: a = 5
+output: a
