--- a/xndlib/test_array-kernels.cfg
+++ b/xndlib/test_array-kernels.cfg
@@ -6,99 +6,99 @@
 #
 
 [MODULE test_array]
-typemaps = 
+typemaps: 
 	long: int64
-includes = 
+includes: 
 	test_array.h
-include_dirs = 
+include_dirs: 
 	examplelib
-sources =
+sources:
 	examplelib/test_array.c
-kinds = C
+kinds: C
 #Xnd
 
-ellipses = none
+ellipses: none
 #, ... 
 #, ...
-#ellipses = ..., var...
+#ellipses: ..., var...
 #debug=True
 
 [KERNEL test_array_range_input]
-kinds = C, Xnd
-prototypes = 
+kinds: C, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes input that copy is changed to range(n)
-input_arguments = a(n)
-hide_arguments = n = len(a)
+description: takes input that copy is changed to range(n)
+input: a(n)
+hide: n = len(a)
 
 [KERNEL test_array_ranges_input]
-kinds = Xnd
-prototypes_Fortran = 
+kinds: Xnd
+prototypes[Fortran]: 
 	long test_array_ranges(long n, long* a);
-prototypes = 
+prototypes: 
 	long test_array_ranges(long n, long* a);
-description = takes input that copy is changed to <row index>*10+range(n)
-input_arguments = a(n,n)
-hide_arguments = n = len(a)
-fortran_arguments_Fortran = a
+description: takes input that copy is changed to <row index>*10+range(n)
+input: a(n,n)
+hide: n = len(a)
+fortran[Fortran]: a
 
 
 [KERNEL test_array_range_inplace]
-kinds = C, Xnd
-prototypes = 
+kinds: C, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes input that is changed to range(n) inplace
-inplace_arguments = a(n)
-hide_arguments = n = len(a)
+description: takes input that is changed to range(n) inplace
+inplace: a(n)
+hide: n = len(a)
 
 [KERNEL test_array_range_inout]
-kinds = C, Xnd
-prototypes = 
+kinds: C, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes contiguous input that is changed to range(n) inplace
-inout_arguments = a(n)
-hide_arguments = n = len(a)
+description: takes contiguous input that is changed to range(n) inplace
+inout: a(n)
+hide: n = len(a)
 
 
 [KERNEL test_array_range_input_output]
-kinds = C, Xnd
-prototypes = 
+kinds: C, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes input that copy is changed to range(n)
-input_arguments = a(n)
-hide_arguments = n = len(a)
-output_arguments = a
+description: takes input that copy is changed to range(n)
+input: a(n)
+hide: n = len(a)
+output: a
 
 [KERNEL test_array_range_inplace_output]
-kinds = C, Xnd
-prototypes = 
+kinds: C, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes input that copy is changed to range(n) and a copy is returned
-inplace_arguments = a(n)
-hide_arguments = n = len(a)
-output_arguments = a
+description: takes input that copy is changed to range(n) and a copy is returned
+inplace: a(n)
+hide: n = len(a)
+output: a
 
 [KERNEL test_array_range_inout_output]
-kinds = C, Xnd
-prototypes = 
+kinds: C, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes input that is changed to range(n) and a copy is returned
-inout_arguments = a(n)
-hide_arguments = n = len(a)
-output_arguments = a
+description: takes input that is changed to range(n) and a copy is returned
+inout: a(n)
+hide: n = len(a)
+output: a
 
 [KERNEL test_array_range_output]
-kinds = C, Fortran, Xnd
-prototypes = 
+kinds: C, Fortran, Xnd
+prototypes: 
 	long test_array_range(long n, long* a);
-description = returns range(n)
-input_arguments = n
-output_arguments = a(n)
+description: returns range(n)
+input: n
+output: a(n)
 
 [KERNEL test_array_range_hide]
-kinds = C
-prototypes = 
+kinds: C
+prototypes: 
 	long test_array_range(long n, long* a);
-description = takes n as input, internally range(n) is computed in memory
-input_arguments = n
-hide_arguments = a(n)
+description: takes n as input, internally range(n) is computed in memory
+input: n
+hide: a(n)
