Move xndtools unittests from xndlib to xndtools.

--- a/xndtools/kernel_generator/tests/test_array-kernels.cfg
+++ b/xndtools/kernel_generator/tests/test_array-kernels.cfg
@@ -11,17 +11,12 @@ typemaps:
 includes: 
 	test_array.h
 include_dirs: 
-	examplelib
+	.
 sources:
-	examplelib/test_array.c
+	test_array.c
 kinds: C
-#Xnd
 
 ellipses: none
-#, ... 
-#, ...
-#ellipses: ..., var...
-#debug=True
 
 [KERNEL test_array_range_input]
 kinds: C, Xnd
