--- a/xndtools/kernel_generator/tests/test_scalar-kernels.cfg
+++ b/xndtools/kernel_generator/tests/test_scalar-kernels.cfg
@@ -4,9 +4,6 @@
 #  Created: June 2018
 #  Author: Pearu Peterson
 #
-# The initial version of this file is generated using command:
-#
-#  xnd_tools config -m test_scalar examplelib/test_scalar.c
 
 [MODULE test_scalar]
 typemaps: 
@@ -14,16 +11,12 @@ typemaps:
 includes: 
 	test_scalar.h
 include_dirs: 
-	examplelib
+	.
 sources:
-	examplelib/test_scalar.c
+	test_scalar.c
 kinds: Xnd
 
 ellipses: none, ...
-#, ... 
-#, ...
-#ellipses: ..., var...
-#debug=False
 
 [KERNEL test_scalar_input]
 prototypes: 
