Move test_mixed to xndtools.

--- a/xndtools/kernel_generator/tests/test_mixed-kernels.cfg
+++ b/xndtools/kernel_generator/tests/test_mixed-kernels.cfg
@@ -15,17 +15,39 @@ typemaps:
 includes:
 	test_mixed.h
 include_dirs:
-	examplelib
+	.
 sources:
-	examplelib/test_mixed.c
+	test_mixed.c
 
-ellipses:none
+ellipses: none
 
-[KERNEL test_mixed_matrices_input]
+[KERNEL test_mixed_matrices_inout_CF]
+skip: True # not supported by ndtypes
 kinds: Xnd
 prototypes:
 	   long test_mixed_matrices(long n, long* a, long* b);
-description: return sum of right-corner elements of a and b
-input: a(n, n), b(n,n)
+description: return the sum of upper-right-corner elements of a and b
+inout: a(n, n), b(n,n)
 hide: n = len(a)
 fortran: b
+
+[KERNEL test_mixed_matrices_inout_CC]
+kinds: C, Fortran
+prototypes[C]:
+	   long test_mixed_matrices(long n, long* a, long* b);
+prototypes[Fortran]:
+	   long test_mixed_matrices(long n, long* a, long* b);
+description: return the sum of upper-right-corner of a and lower-left-corner of b
+inout: a(n, n), b(n,n)
+hide: n = len(a)
+
+
+[KERNEL test_mixed_matrices_inout_FF]
+skip: True # not supported by ndtypes
+kinds: Xnd
+prototypes:
+	   long test_mixed_matrices(long n, long* a, long* b);
+description: return the sum of lower-left-corner of a and upper-right-corner of b
+inout: a(n, n), b(n,n)
+hide: n = len(a)
+fortran: a, b
