--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -16,7 +16,7 @@ test:
     - python test/test_xndtools.py
 
 requirements:
-  build:
+  host:
     - gumath ==0.2.0dev3
     - ndtypes ==0.2.0dev3
     - xnd ==0.2.0dev3
