--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -16,6 +16,10 @@ test:
     - python test/test_xndtools.py
 
 requirements:
+  build:
+    - gumath ==0.2.0dev3
+    - ndtypes ==0.2.0dev3
+    - xnd ==0.2.0dev3
   host:
     - gumath ==0.2.0dev3
     - ndtypes ==0.2.0dev3
