Revised array arguments handling in generated kernels.

--- a/xndtools/kernel_generator/tests/test_mixed-kernels.cfg
+++ b/xndtools/kernel_generator/tests/test_mixed-kernels.cfg
@@ -22,7 +22,6 @@ sources:
 ellipses: none
 
 [KERNEL test_mixed_matrices_inout_CF]
-skip: True # not supported by ndtypes
 kinds: Xnd
 prototypes:
 	   long test_mixed_matrices(long n, long* a, long* b);
@@ -31,23 +30,29 @@ inout: a(n, n), b(n,n)
 hide: n = len(a)
 fortran: b
 
-[KERNEL test_mixed_matrices_inout_CC]
-kinds: C, Fortran
-prototypes[C]:
+[KERNEL test_mixed_matrices_inout_FC]
+kinds: Xnd
+prototypes:
 	   long test_mixed_matrices(long n, long* a, long* b);
-prototypes[Fortran]:
+description: return the sum of upper-right-corner elements of a and b
+inout: a(n, n), b(n,n)
+hide: n = len(a)
+fortran: a
+
+[KERNEL test_mixed_matrices_inout_CC]
+kinds: C, Fortran, Xnd
+prototypes:
 	   long test_mixed_matrices(long n, long* a, long* b);
 description: return the sum of upper-right-corner of a and lower-left-corner of b
 inout: a(n, n), b(n,n)
 hide: n = len(a)
 
-
 [KERNEL test_mixed_matrices_inout_FF]
-skip: True # not supported by ndtypes
-kinds: Xnd
+kinds: C, Fortran, Xnd
 prototypes:
 	   long test_mixed_matrices(long n, long* a, long* b);
 description: return the sum of lower-left-corner of a and upper-right-corner of b
 inout: a(n, n), b(n,n)
 hide: n = len(a)
 fortran: a, b
+
