Fix appveyor CI, 2.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,7 +26,7 @@ build_script:
   - "%PYTHON%\\python.exe setup.py install"
   - cd ..\gumath
   - "%PYTHON%\\python.exe setup.py install"
-  - cd ..
+  - cd ..\xndtools
   - "%PYTHON%\\python.exe setup.py develop"
   - "%PYTHON%\\python.exe setup.py test"
   - git clean -xdf
