Add pytest dependence to conda meta.yaml

--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -17,14 +17,20 @@ test:
 
 requirements:
   build:
+    - pytest
+    - pytest-runner
     - gumath ==0.2.0dev3
     - ndtypes ==0.2.0dev3
     - xnd ==0.2.0dev3
   host:
+    - pytest
+    - pytest-runner
     - gumath ==0.2.0dev3
     - ndtypes ==0.2.0dev3
     - xnd ==0.2.0dev3
   run:
+    - pytest
+    - pytest-runner
     - gumath ==0.2.0dev3
     - ndtypes ==0.2.0dev3
     - xnd ==0.2.0dev3
