--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,30 @@
+dist: xenial
 language: python
 python:
-  - "3.6"
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-install:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  # Useful for debugging any issues with conda
-  - conda info -a
-  - conda env create --file=conda-envs/xndtools-devel.yaml -n test-environment -q
-  - source activate test-environment
-  - export PREFIX=$CONDA_PREFIX
-  - python --version
-  - pytest --version
+  - 3.6
 
-before_script:
-  - python setup.py develop
-
-script:
-  - pytest -v xndtools/
+matrix:
+  include:
+    - compiler: conda-c
+      install:
+        - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+            wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+          else
+            wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+          fi
+        - bash miniconda.sh -b -p $HOME/miniconda
+        - export PATH="$HOME/miniconda/bin:$PATH"
+        - hash -r
+        - conda config --set always_yes yes --set changeps1 no
+        - conda update -q conda
+        # Useful for debugging any issues with conda
+        - conda info -a
+      before_script:
+        - conda env create --file=conda-envs/xndtools-devel.yaml -n test-environment -q
+        - source activate test-environment
+        - export PREFIX=$CONDA_PREFIX
+      script:
+        - python --version
+        - pytest --version
+        - python setup.py develop
+        - pytest -v xndtools/
